# gkthiruvathukal.github.io

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
in-progress/blog_posts/: index.rst
in-progress/blog_posts/academia/: creating-an-arxiv-db.rst
in-progress/blog_posts/gitting_good/: 0-why-should-you-sign-your-commits.rst  1-git-configuration.rst  2-version-control-mining-basics.rst  3-mining-git.rst
in-progress/blog_posts/hpc/: submitting-gpu-jobs-to-slurm-at-loyola-university-chicago.rst
in-progress/blog_posts/internet/: hugo-gopher-gemini-and-annoyances.rst  kisses-keep-static-site-examples-simple.rst
in-progress/blog_posts/software_engineering/: polyglot-lua-part-0.rst
src/: __init__.py  conf.py  index.rst  refs.bib
src/_static/: NMSynovic_CV.docx  custom.css
src/blog_posts/: deepseek-w-ollama-open-webui.rst  index.rst
src/book_summaries/: index.rst  on-being-a-scientist-a-guide-to-responsible-conduct-in-research.rst  ori-introduction-to-the-responsible-conduct-of-research.rst
src/pages/: about.rst  funding.rst  index.rst  prospective-students.rst  works.rst
src/papers/: index.rst
src/portfolio/: index.rst
src/posts/: agentic-tutor-hpc-sc25-eduhpc2025.rst  ai-in-hiring-fairness-or-just-automated-bias.rst  install-tailscale-with-ansible.rst  jazz-piano-playlist.rst  signal-injection-zipa.rst  special-issue-low-code-no-code-metaverse.rst  tla-for-all-running-model-checking-in-a-python-notebook.rst  yt-dlp-jazz.rst
tools/: 99-scholarly-bibliometrics.tex  get-zotero-bibtex.sh
(+3 files in other folders)
